--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -108,20 +108,20 @@
 			            <td  style="width:33%" ng-show="selectedBranchId && ProductCategory.length>0">
 			              		<span class="bold">Level 2 Category  </span>
 			              		<p style="margin-top: 10px;"><em ng-hide="ProductParentCategory">No Level 2 Categories </em></p>
-			              		<select ng-show="ProductParentCategory"  class=" form-control prodo-width50 prodo-validation" ng-model="selectedParentCategory" ng-change="getLevel2Categories(selectedParentCategory);" ng-options="category.categoryid as category.categoryname for category in ProductParentCategory" required  name="selectedParentCategory"></select>
+			              		<select ng-show="ProductParentCategory"  class=" form-control prodo-width50 prodo-validation" ng-model="outer.selectedParentCategory" ng-change="getLevel2Categories(outer.selectedParentCategory.categoryid);" ng-options="category as category.categoryname for category in ProductParentCategory" required  name="selectedParentCategory"></select>
 			              </td>
 
 			              <td style="width:33%" ng-show="selectedBranchId && ProductCategory.length>0">
 			              		<span class="bold">Level 3 Category  </span>
 			              		<p style="margin-top: 10px;"><em ng-hide="ProductCategoryLevel2">No Level 3 Categories </em></p>
-			              		<select  ng-show="ProductCategoryLevel2" class=" form-control prodo-width50 prodo-validation" ng-model="selectedCategory" ng-change="getLevel3Categories(selectedCategory);" ng-options="category.categoryid as category.categoryname for category in ProductCategoryLevel2" required  name="selectedCategory"></select>
+			              		<select  ng-show="ProductCategoryLevel2" class=" form-control prodo-width50 prodo-validation" ng-model="outer.selectedCategory" ng-change="getLevel3Categories(outer.selectedCategory.categoryid);" ng-options="category as category.categoryname for category in ProductCategoryLevel2" required  name="selectedCategory"></select>
 			              </td>
 
 			               <td style="width:33%" ng-show="selectedBranchId && ProductCategory.length>0">
 			              		<span class="bold"> Level 4 Category </span>
 
 			              		<p style="margin-top: 10px;"><em ng-hide="ProductCategoryLevel3">No Level 4 Categories </em></p>
-			              		 <select ng-show="ProductCategoryLevel3" ng-selected="category" class=" form-control prodo-width50 prodo-validation" ng-change="changeCategory(category)" ng-model="category" ng-options="category as category.categoryname for category in ProductCategoryLevel3" name="subcategory" required ></select>
+			              		 <select ng-show="ProductCategoryLevel3"  class=" form-control prodo-width50 prodo-validation" ng-change="changeCategory(outer.category)" ng-model="outer.category" ng-options="category as category.categoryname for category in ProductCategoryLevel3" name="subcategory" required ></select>
 
 
                                  <div  ng-show="(form.productForm.subcategory.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.subcategory.$invalid==true)" class="prodo-product-Invalid">
@@ -380,14 +380,14 @@
                  </tr>
 
                    <tr ng-hide=" (ProductConfigs.configuration.length>0  ) || ( chckedIndexs.length>0 )">
-                       <td  colspan="4" ng-show="category.categoryname">
+                       <td  colspan="4" ng-show="outer.category.categoryname">
 	                       <span class="bold"> Configurations : </span>
 	                         <p>	<em>
-	                       No configurations defined for category - {{category.categoryname}}. Please contact  your admin to add {{category.categoryname}} related product configurations. 
+	                       No configurations defined for category - {{outer.category.categoryname}}. Please contact  your admin to add {{outer.category.categoryname}} related product configurations. 
 							</em></p>
                        </td>
 
-                        <td  colspan="4" ng-hide="category.categoryname">
+                        <td  colspan="4" ng-hide="outer.category.categoryname">
 	                       <span class="bold"> Configurations : </span>
 	                         <p>	<em>
 	                       No configurations. Please contact your admin.
