--- a/src/app/OrderZapp/oz/views/oz.userdefined.tags.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.userdefined.tags.tpl.html
@@ -15,7 +15,7 @@
 
         <tr ng-repeat = 'lists in allTagsContent | filter : filters'>
             <td ng-bind = 'lists'></td>
-            <td><button class = 'btn-sm' ng-click = 'removeTagContent(lists)'>Delete</button>
+            <td><button class = 'btn-sm btn-info' ng-click = 'removeTagContent(lists)'>Delete</button>
         </tr>
     </table>
 </div>
