--- a/src/app/ProviderWall/ManageDeliveryTime/views/oz.manage.deliverytime.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryTime/views/oz.manage.deliverytime.tpl.html
@@ -1,3 +1,15 @@
 <div style="border: 1px solid #EEE8E8; border-radius: 6px;" class="">
-	<h5>Manage Delivery Time</h5>
+
+	<table class = 'table table-hover'>
+	    <tr>
+	    	<th style = 'width : 30%'>Product Name</th>
+	    	<th style = 'width : 30%'>Delivery Lead Time</th>
+	    	<th style = 'width : 30%'>Action</th>
+	    </tr>
+	    <tr>
+	    	<td>test</td>
+	    	<td>test</td>
+	    	<td><button class = 'btn btn-info' style = 'width : 100px'>Edit</button></td>
+	    </tr>
+	</table>
 </div>
