Feature : Orders css changed, order tree andcustomer information block compacted, order no alternate css

--- a/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
@@ -1,8 +1,8 @@
  <div class="list-group-item orderbox"> <!-- ngrepeat outer box css-->
 
 <!-- order /////////////////////////////////// -->
-<div class="headingOrderDiv"> 
- <span class="bold">Order No: </span> <span class="oz-contentsRight">{{order.suborderid}}</span>
+<div ng-class-odd="'oddRowOrderid'" ng-class-even="'evenRowOrderid'" class="headingOrderDiv" > 
+ <span class="bold color-white" >Order No:  <span class="oz-contentsRight">{{order.suborderid}}</span> </span>
 
       <span ng-hide="order.status =='cancelled' || order.status =='rejected' " class=" label label-info  font14 pull-right "  ng-class="{ 
                      bgGreen1: (order.status =='orderreceived' ) ,
@@ -241,23 +241,16 @@
 
 <!-- Tracking tree////////////////////////////////// -->
 <div ng-hide=" order.status=='cancelled' || order.status=='rejected'">
-<div class="headingDiv"> 
-<span class="bold">Order Tracking</span>
+<div class="headingDiv" style="height:40px;"> 
 
 
-      
+<a  style="color:black" href="" ng-init="showTrackingTree=false" ng-click="showTrackingTree = showTrackingTree === false ? true: false;"><i style="vertical-align: sub;" class="fa fa-arrow-down"></i> <span class="bold" style="vertical-align: text-top;"> Order Tracking </span></a>
 
 
-</div>
-
-
-<div> <!-- order tracking tree -->
 
 
 <!-- action bar -->
-
-
-<div class="pull-right" ng-hide="order.status=='ordercomplete' || order.status=='cancelled' || order.status=='rejected'">
+     <div class="pull-right" ng-hide="order.status=='ordercomplete' || order.status=='cancelled' || order.status=='rejected'" style="margin-top: -5px">
        
             <div class="btn-group paddingRight10"><!-- <span class="Valign">Action</span> -->
               <a class=" dropdown-toggle "  type="button" data-toggle="dropdown">
@@ -265,14 +258,9 @@
               </a>
               <ul class="dropdownRightPosition dropdown-menu" style="right:4px" role="menu">
                                <!--ng-click -call showDisplay for previous menu where states not defined in ref dic  -->
-            
 
                    <li class="" ng-repeat="config in orderConfigStatus" ng-show="config.action !==null && config.order_status==order.status ">   
-                   
                     <a   href="#"   ng-click="changeStatus(config.action , order)"><span class="capital"> {{config.action}} </span></a>
-                    
-                    
-
                   </li>
 
                    <li class="" ng-show="order.status=='orderreceived'"> 
@@ -282,15 +270,20 @@
                   <li class="" ng-hide="order.status=='orderreceived' || order.status=='done'">
                     <a href="#"   ng-click="changeStatus('cancel' , order)"><span class="capital"> Cancel</span></a>
                   </li>
-                  
-
-
 
                 </ul>
                </div>
           </div>
-
 <!-- action bar -->
+
+
+</div>
+
+
+<div ng-show="showTrackingTree==true"> <!-- order tracking tree -->
+
+
+
              <div id="tabs">
           <ul id="tabTracking" class=" oz-trackingUL nav nav-pills" ng-init="firstTreeTabOpen(order.status);" >
             <li class="tabtrackingLi"  >
@@ -354,9 +347,9 @@
            
                     <p ng-style="displayAction('ordercomplete')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :  ( order.status=='ordercomplete'  )  }"></i> Order complete </p>
          </div>
-         <div ng-show="tab1==1 || tab2==1 || tab3==1 || tab4==1" >
-                <i ng-click="tab1=0; tab2 =0; tab3=0; tab4 =0; " class="prodo-cursor ozUpArrow  glyphicon glyphicon-circle-arrow-up " ></i>
-         </div>
+       <!--   <div ng-show="tab1==1 || tab2==1 || tab3==1 || tab4==1" >
+                <i ng-click="tab1=0; tab2 =0; tab3=0; tab4 =0; " class="prodo-cursor ozUpArrow  glyphicon glyphicon-circle-arrow-up " ></i>  to close tracking tree
+         </div> -->
       </div>
 
 
@@ -370,9 +363,11 @@
 <!-- Innvoice ////////////////////////////////// -->
 <div >
 <div class="headingDiv"> 
-<span class="bold">Customer Info & Invoice </span>
+
+<a  style="color:black" href="" ng-init="showCustInfo=false" ng-click="showCustInfo = showCustInfo === false ? true: false;"><i class="fa fa-arrow-down"></i> <span class="bold"> Customer Info & Invoice </span> </a>
+
 </div>
-<div class="row">
+<div class="row" ng-show="showCustInfo==true">
   <div>
 
 
@@ -397,7 +392,7 @@
 
 
 
-</div><br/>
+</div>
 <!-- Innvoice ////////////////////////////////// -->
      
 
