tested add time slot functionality without validation

--- a/src/app/ProviderWall/ManageBranch/views/oz.seller.branch.manage.tpl.html
+++ b/src/app/ProviderWall/ManageBranch/views/oz.seller.branch.manage.tpl.html
@@ -103,7 +103,7 @@
 		     			<div class="row">
 		     				<div class="col-md-2" style="font-size:12px;">From:</div>
 		     				<div class="col-md-5">
-		     					<input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'addbranch.operationHours.from.hours' name = 'workstarthours' ng-pattern="/^(0?[1-9]|1[023])$/" required>
+		     					<input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'addbranch.operationHours.from.hours' name = 'workstarthours' required>
 		     				</div>
 		     				<div class="col-md-5">
 		     					<input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'addbranch.operationHours.from.minutes' name = 'workstartminute' ng-pattern="/^[0-9]{1,2}$/" required>
@@ -117,7 +117,7 @@
 		     			<div class="row">
 		     				<div class="col-md-2" style="font-size:12px;">To:</div>
 		     				<div class="col-md-5">
-		     					<input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'addbranch.operationHours.to.hours' name = 'workendhours' ng-pattern = '/^(0?[1-9]|1[023])$/' required>
+		     					<input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'addbranch.operationHours.to.hours' name = 'workendhours' required>
 		     				</div>
 		     				<div class="col-md-5">
 		     					<input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'addbranch.operationHours.to.minutes' name = 'workendminutes' ng-pattern = '/^[0-9]{1,2}$/' required>
@@ -146,15 +146,15 @@
 		     		<div class="col-md-5">
 		     			<div class="row">
 		     				<div class="col-md-2" style="font-size:12px;">From:</div>
-		     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'slot.from.hours' name = '' ng-pattern = '/^(0?[1-9]|1[023])$/' required></div>
-		     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'slot.from.minutes' name = '' ng-pattern = '/^[0-9]{1,2}$/' required></div>
+		     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'slot.from.hours' name = '' required></div>
+		     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'slot.from.minutes' name = '' required></div>
 		     			</div>
 		     		</div>
 		     		<div class="col-md-5">
 		     			<div class="row">
 		     				<div class="col-md-2" style="font-size:12px;">To:</div>
-		     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'slot.to.hours' name = '' ng-pattern = '/^(0?[1-9]|1[023])$/' required></div>
-		     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'slot.to.minutes' name = '' ng-pattern = '/^[0-9]{1,2}$/' required></div>
+		     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'slot.to.hours' name = '' required></div>
+		     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'slot.to.minutes' name = '' required></div>
 		     			</div>
 		     		</div>
 		     		<div class="col-md-2">
